<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/cpu_dice"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="90dp"
        android:background="#000000"
        android:contentDescription="@string/cpu_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice1" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/computer"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cpu_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/player_dice"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="64dp"
        android:background="#000000"
        android:contentDescription="@string/player_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpu_dice"
        app:srcCompat="@drawable/dice2" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/player"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textColorHint="#000000"
        android:textColorLink="#050505"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/player_dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_dice">

        <Button
            android:id="@+id/button_lower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lower"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            app:backgroundTint="#474342" />

        <Button
            android:id="@+id/button_higher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/higher"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
            android:textColorLink="#000000"
            app:backgroundTint="#474342" />
    </LinearLayout>


    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text=""
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
